# Service-Provider-Selection-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  te.py
.github/workflows/: ci.yml  release.yml
config/: criteria.yaml
examples/: project_brief.md  providers.csv
src/provider_selection_agent/: __init__.py  __main__.py  cli.py  config.py  llm.py  loaders.py  mcp.py  mcp_bridge.py  memory.py  models.py  reporting.py  scoring.py  sourcing.py  streamlit_app.py  workflow.py
src/provider_selection_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_llm_and_workflow.py  test_loading_and_scoring.py  test_mcp.py  test_mcp_bridge.py  test_sourcing.py
